fix(web): fix overflowing items on index

--- a/packages/web/src/pages/index.module.css
+++ b/packages/web/src/pages/index.module.css
@@ -13,6 +13,15 @@
 	font-size: 16px;
 }
 
+.item {
+	display: inline-block;
+	max-width: 100%;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	vertical-align: middle;
+}
+
 @media only screen and (max-width: 600px) {
 	.sections {
 		flex-direction: column;
